# ask-human-for-context

./: .gitignore  README.md  pyproject.toml  test-auth.txt
src/ask_human_for_context_mcp/: __init__.py  server.py
tests/: __init__.py  test_entry_points.py  test_icon_paths.py  test_mcp_server.py  test_package.py  test_readme_features.py
