[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-human-for-context-mcp"
version = "1.0.3"
description = "Ask Human for Context MCP Server - GUI dialogs for AI assistant interaction"
authors = [{name = "Gal Peretz", email = "gal@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "ask-human-for-context", "gui", "dialog", "cursor", "ai-assistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Desktop Environment :: File Managers"
]

dependencies = [
    "mcp",
    "starlette",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/galperetz/ask-human-for-context-mcp"
Repository = "https://github.com/galperetz/ask-human-for-context-mcp"
Issues = "https://github.com/galperetz/ask-human-for-context-mcp/issues"

[project.scripts]
ask-human-for-context-mcp = "ask_human_for_context_mcp:main"



[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
